--- a/.gitignore
+++ b/.gitignore
@@ -7,7 +7,10 @@
 /.idea/workspace.xml
 /.idea/navEditor.xml
 /.idea/assetWizardSettings.xml
+/.idea/dictionaries
+/.idea/compiler.xml
 .DS_Store
 /build
 /captures
+/gradle
 .externalNativeBuild
