新增一些模块.

--- a/settings.gradle
+++ b/settings.gradle
@@ -1,1 +1,1 @@
-include ':app', ':content', ':progress', ':clock', ':utils', ':state', ':grade'
+include ':app', ':content', ':progress', ':clock', ':utils', ':state', ':grade', ':indicator'
